<resources>
    <string name="version_name">0.0.4</string>
    <string name="app_name">Anglers\' Log</string>
    <string name="app_description">Track, analyze, share.</string>
    <string name="app_photos_dir">/AnglersLog</string>
    <string name="app_search">Search Anglers\' Log</string>
    <string name="hashtag">AnglersLogApp</string>
    <string name="website">http://cohenadair.com/anglerslog/</string>
    <string name="share_text">Shared with @anglerslog for #android #anglerslogapp</string>
    <string name="no_instagram">Instagram is not installed on this device.</string>
    <string name="instagram_disabled">Instagram is installed, but disabled on this device.</string>
    <string name="instabug_sheet_title">Bugs &amp; Feedback</string>
    <string name="instabug_sheet_description">Tap the ladybug button to send bug reports and feedback.  The button can be disabled from the Settings menu.</string>
    <string name="backup_sheet_title">Backup</string>
    <string name="backup_sheet_description">Be sure to periodically export Anglers\' Log to ensure no data is lost. Visit the Settings menu to learn more.</string>
    <string name="pref_units">pref_units</string>
    <string name="pref_instabug">pref_instabug</string>
    <string name="pref_auto_backup">pref_auto_backup</string>
    <string name="pref_about_group">pref_about_group</string>
    <string name="pref_google_maps_terms">pref_google_maps_terms</string>
    <string name="pref_icons8_terms">pref_icons8_terms</string>
    <string name="pref_version">pref_version</string>
    <string name="pref_import">pref_import</string>
    <string name="pref_export">pref_export</string>
    <string name="pref_reset">pref_reset</string>
    <string name="google_maps_terms_title">Google Maps Terms &amp; Privacy</string>
    <string name="icons8_terms_title">Icons8 Terms &amp; Privacy</string>
    <string name="icons8_terms">Some icons used in Anglers\' Log were developed by <a href="https://icons8.com/">Icons8</a>.\n\nIcons8 provides thousands of free icons for both personal and commercial use.</string>
    <string name="backup_alert_title">Backup</string>
    <string name="backup_alert_msg">Would you like to backup and sync Anglers\' Log data with Google?</string>
    <string name="backup_alert_confirm">Backup</string>
    <string name="backup_alert_deny">Not Now</string>
    <string name="success_sync">Data sync successful!</string>
    <string name="display_units">Display Units</string>
    <string name="display_unit_types">Unit Types</string>
    <string name="display_units_summary">This will not affect existing input values.</string>
    <string name="instabug_title">Bugs and Feedback</string>
    <string name="instabug_summary">Enable or disable the Instabug floating button.</string>
    <string name="instabug_restart">Changes will take effect after Anglers\' Log is restarted.</string>
    <string name="error_sync">Error syncing data</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="auto_backup_summary">Automatically save application data to Google\'s cloud services.</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="about_setting">About, Terms &amp; Privacy</string>
    <string name="version">Version</string>
    <string name="import_name">Import</string>
    <string name="import_summary">Transfer data from another device platform.</string>
    <string name="import_title">Confirm Import</string>
    <string name="import_dialog_message">Importing new data will erase current data and may take several minutes.</string>
    <string name="import_success">Import successful</string>
    <string name="import_error">Import Error</string>
    <string name="export">Export</string>
    <string name="export_summary">Save data to be transferred to a new device platform.</string>
    <string name="export_title">Confirm Export</string>
    <string name="export_dialog_message">Exporting data will not effect current data, but may take several minutes.</string>
    <string name="export_success">Export successful</string>
    <string name="export_error">Export Error</string>
    <string name="reset_logbook">Reset Logbook</string>
    <string name="reset_summary">Erase all existing Anglers\' Log data.</string>
    <string name="reset_dialog_message">Resetting Anglers\' Log will delete all existing data and revert Anglers\' Log to its default settings. This cannot be undone.</string>
    <string name="reset_success">Reset successful</string>
    <string name="reset_dialog_title">Confirm Reset</string>
    <string name="error">Error</string>
    <string name="photos">Photos</string>
    <string name="species_caught">Species Caught</string>
    <string name="species_stats">Species Statistics</string>
    <string name="species">Species</string>
    <string name="catch_string">Catch</string>
    <string name="longest_catch">Longest Catch</string>
    <string name="heaviest_catch">Heaviest Catch</string>
    <string name="longest_catches">Longest Catches</string>
    <string name="heaviest_catches">Heaviest Catches</string>
    <string name="no_recorded_length">There are no catches with recorded lengths.</string>
    <string name="no_recorded_weight">There are no catches with recorded weights.</string>
    <string name="bait">Bait</string>
    <string name="baits_used">Baits Used</string>
    <string name="bait_stats">Bait Statistics</string>
    <string name="clarity">Clarity</string>
    <string name="trip">Trip</string>
    <string name="anglers">Anglers</string>
    <string name="water_clarity">Water Clarity</string>
    <string name="fishing_method">Fishing Method</string>
    <string name="angler">angler</string>
    <string name="water_depth">Water Depth</string>
    <string name="water_temperature">Water Temperature</string>
    <string name="methods">Fishing Methods</string>
    <string name="result">Result</string>
    <string name="notes">Notes</string>
    <string name="quantity">Quantity</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="depth">Depth</string>
    <string name="bait_category">Bait Category</string>
    <string name="date">Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="time">Time</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="artificial">Artificial</string>
    <string name="live">Live</string>
    <string name="real">Real</string>
    <string name="released">Released</string>
    <string name="kept">Kept</string>
    <string name="location">Location</string>
    <string name="location_success">Location Catches</string>
    <string name="location_stats">Location Statistics</string>
    <string name="new_fishing_spot">New Fishing Spot</string>
    <string name="fishing_spot">Fishing Spot</string>
    <string name="fishing_spots">Fishing Spots</string>
    <string name="properties">Properties</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="lat">Lat</string>
    <string name="lng">Lng</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_f">Temperature (\u00b0F)</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_speed_colon">Wind Speed:</string>
    <string name="wind_mph">Wind Speed (mph)</string>
    <string name="mph">mph</string>
    <string name="kmh">km/h</string>
    <string name="sky_conditions">Sky Conditions</string>
    <string name="sky_conditions_colon">Sky:</string>
    <string name="catch_details">Catch Details</string>
    <string name="fish_details">Fish Details</string>
    <string name="trip_details">Trip Details</string>
    <string name="water_conditions">Water Conditions</string>
    <string name="weather_conditions">Weather Conditions</string>
    <string name="degrees_f">\u00b0F</string>
    <string name="degrees_c">\u00b0C</string>
    <string name="lbs">lbs</string>
    <string name="inches">\"</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="ft">ft</string>
    <string name="meters">m</string>
    <string name="zero">0</string>
    <string name="to">to</string>
    <string name="show_more">Show more</string>
    <string name="show_all">Show all</string>
    <string name="all">All</string>
    <string name="show_catches">Show catches</string>
    <string name="show_all_catches">Show all catches</string>
    <string name="all_catches">All catches</string>
    <string name="all_locations">All locations</string>
    <string name="all_baits">All baits</string>
    <string name="more">More</string>
    <string name="totals">Totals</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="empty"> </string>
    <string name="favorite">Favorite</string>
    <string name="sort_by">Sort by</string>
    <string name="number_of_catches">Number of catches</string>
    <string name="number_of_fishing_spots">Number of fishing spots</string>
    <string name="newest_to_oldest">Newest to oldest</string>
    <string name="oldest_to_newest">Oldest to newest</string>
    <string name="locations_lowercase">locations</string>
    <string name="add_photo">Add photo</string>
    <string name="add_species">Add species</string>
    <string name="add_location">Add location</string>
    <string name="add_bait">Add bait</string>
    <string name="add_fishing_method">Add fishing method</string>
    <string name="add_water_clarity">Add water clarity</string>
    <string name="add_note">Add note</string>
    <string name="add_name">Add name</string>
    <string name="add_description">Add description</string>
    <string name="add_bait_category">Add bait category</string>
    <string name="add_catches">Add catches</string>
    <string name="add_locations">Add locations</string>
    <string name="add_fishing_spot">Add fishing spot</string>
    <string name="add_anglers">Add anglers</string>
    <string name="add_weather">Add weather</string>
    <string name="update_weather">Update weather</string>
    <string name="dismiss">Dismiss</string>
    <string name="attach_photos">Attach photos</string>
    <string name="drawer_catches">Catches</string>
    <string name="drawer_trips">Trips</string>
    <string name="drawer_locations">Locations</string>
    <string name="drawer_baits">Baits</string>
    <string name="drawer_stats">Statistics</string>
    <string name="category_hint">Tap to add or select a category</string>
    <string name="catches_hint">Tap to add or select catches</string>
    <string name="locations_hint">Tap to add or select locations</string>
    <string name="anglers_hint">Tap to add or select anglers</string>
    <string name="name_hint">Enter a name</string>
    <string name="notes_hint">Enter some notes</string>
    <string name="sky_hint">ex. Cloudy</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_zoom">Zoom Out</string>
    <string name="bait_no_catches">No catches have been made with this bait.</string>
    <string name="catch_photo_description">A photo of the current catch.</string>
    <string name="bait_photo_description">A photo of the current bait.</string>
    <string name="add_fishing_spot_description">Add fishing spot to location.</string>
    <string name="crosshairs_description">The coordinates of the current fishing spot.</string>
    <string name="refresh_description">Attempts to get weather data from the web.</string>
</resources>