<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/units_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_weight="1"/>
        
        <ImageButton
            android:id="@+id/refresh_button"
            android:layout_width="@dimen/image_button_size"
            android:layout_height="@dimen/image_button_size"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_refresh"
            android:contentDescription="@string/refresh_description"/>

    </LinearLayout>

    <com.cohenadair.anglerslog.views.TextInputView
        android:id="@+id/temperature_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        custom:titleText="@string/temperature"
        custom:editTextHint="@string/zero"/>

    <com.cohenadair.anglerslog.views.TextInputView
        android:id="@+id/wind_speed_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        custom:titleText="@string/wind_speed"
        custom:editTextHint="@string/zero"/>

    <com.cohenadair.anglerslog.views.TextInputView
        android:id="@+id/sky_conditions_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:titleText="@string/sky_conditions"
        custom:editTextHint="@string/sky_hint"/>

</LinearLayout>