<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/bait_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bait_image_view"
                android:layout_width="@dimen/thumbnail_size"
                android:layout_height="@dimen/thumbnail_size"
                android:layout_marginRight="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:contentDescription="@string/bait_photo_description"
                android:src="@drawable/no_catch_photo"/>

            <com.cohenadair.anglerslog.views.TitleSubTitleView
                android:id="@+id/title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                custom:titleText="@string/bait"
                custom:subtitleText="@string/bait_category"
                custom:titleStyle="@style/TextView.Large"
                custom:subtitleStyle="@style/TextView.MediumSubtitle"/>

        </LinearLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:text="@string/properties"/>

        <com.cohenadair.anglerslog.views.PropertyDetailView
            android:id="@+id/type_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            custom:propertyName="@string/type"/>

        <com.cohenadair.anglerslog.views.PropertyDetailView
            android:id="@+id/color_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            custom:propertyName="@string/color"/>

        <com.cohenadair.anglerslog.views.PropertyDetailView
            android:id="@+id/size_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            custom:propertyName="@string/size"/>

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:visibility="gone"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/drawer_catches"/>

        <TextView
            android:id="@+id/no_catches_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:text="@string/bait_no_catches"/>

    </LinearLayout>

</ScrollView>