<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_search"
          android:title="@string/action_search"
          app:showAsAction="ifRoom"
          app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item android:id="@+id/action_zoom"
          android:icon="@drawable/ic_zoom_map"
          android:title="@string/action_zoom"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_share"
          android:icon="@drawable/ic_share"
          android:title="@string/action_share"
          app:showAsAction="ifRoom" />
</menu>
