<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@color/global_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Name -->
    <com.cohenadair.anglerslog.views.TextInputView
        android:id="@+id/name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:titleText="@string/name"
        custom:editTextHint="@string/name_hint"/>

    <include layout="@layout/view_break"/>

    <!-- Google Map -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <fragment
            android:id="@+id/fishing_spot_map"
            android:name="com.cohenadair.anglerslog.fragments.DraggableMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <ImageView
            android:layout_width="@dimen/image_button_size"
            android:layout_height="@dimen/image_button_size"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_crosshairs"
            android:contentDescription="@string/crosshairs_description"/>

    </RelativeLayout>

    <include layout="@layout/view_break"/>

    <!-- Coordinates -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:orientation="horizontal">

        <com.cohenadair.anglerslog.views.TitleSubTitleView
            android:id="@+id/latitude_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            custom:titleText="@string/latitude"
            custom:subtitleText="0.000000"
            custom:titleStyle="@style/TextView.Header"/>

        <com.cohenadair.anglerslog.views.TitleSubTitleView
            android:id="@+id/longitude_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            custom:titleText="@string/longitude"
            custom:subtitleText="0.000000"
            custom:titleStyle="@style/TextView.Header"/>

    </LinearLayout>

</LinearLayout>
