<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/view_cell_separator" />

    <TextView
        style="@style/TextView.Medium"
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_default"
        android:text="@string/instabug_sheet_title"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/margin_default"/>

    <TextView
        style="@style/TextView.PrimaryListItem"
        android:id="@+id/description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_default"
        android:paddingRight="@dimen/margin_default"
        android:paddingBottom="@dimen/margin_default"
        android:text="@string/instabug_sheet_description"/>

    <Button
        style="@style/Button.BorderlessColoredText"
        android:id="@+id/close_button"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismiss"/>

</LinearLayout>