<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@color/global_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:orientation="vertical">

        <!-- Name -->
        <com.cohenadair.anglerslog.views.InputTextView
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:titleText="@string/name"
            custom:editTextHint="@string/name_hint"/>

        <include layout="@layout/view_divider"/>

        <!-- Fishing Spots -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginBottom="@dimen/spacing_small_half"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView.Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fishing_spots"/>

            <ImageButton
                android:id="@+id/add_button"
                android:background="#00000000"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:src="@drawable/ic_add"
                android:contentDescription="@string/add_fishing_spot_description"/>

        </LinearLayout>

        <!-- Fishing spot list items will be added programmatically since a ListView cannot be embedded in a ScrollView -->

    </LinearLayout>
</ScrollView>
