<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_list_item_condensed"
    android:paddingTop="@dimen/margin_half"
    android:paddingBottom="@dimen/margin_half"
    android:paddingLeft="@dimen/margin_default"
    android:paddingRight="@dimen/margin_default">
    <!-- Use half margins for spacing -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view"
        android:layout_width="@dimen/size_list_thumb_condensed"
        android:layout_height="@dimen/size_list_thumb_condensed"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/margin_large"
        android:src="@drawable/placeholder_circle"
        android:contentDescription="@string/catch_photo_description"/>

    <com.cohenadair.anglerslog.views.TitleSubTitleView
        android:id="@+id/content_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        custom:titleText="@string/species"
        custom:titleStyle="@style/TextView.PrimaryListItem"
        custom:subtitleText="@string/date"
        custom:subtitleStyle="@style/TextView.SmallSubtitle"/>

</LinearLayout>